bugs fixed till add to cart

--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.nkart</groupId>
-  <artifactId>ShoppingCartBackEnd</artifactId>
+  <groupId>com.niit</groupId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>ShoppingCartBackEnd</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -137,4 +135,6 @@
 
  
   </dependencies>
+  <name>MotoCartbackend</name>
+  <artifactId>MotoCartbackend</artifactId>
 </project>
